--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,16 @@
 {
     "name": "mariapp-server",
     "version": "1.0.0",
-    "description": "Backend API para MariAPP com SQLite",
+    "description": "Backend API para MariAPP com SQLite (Turso)",
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
         "dev": "node --watch index.js"
     },
     "dependencies": {
+        "@libsql/client": "^0.4.3",
         "cors": "^2.8.5",
-        "express": "^4.18.2",
-        "sql.js": "^1.10.2"
+        "dotenv": "^16.4.1",
+        "express": "^4.18.2"
     }
 }
